--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,7 +76,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  --font-roboto: "Roboto", sans-serif;
+  font-family: var(--font-onest), ui-sans-serif, system-ui, sans-serif;
 }
 
 .dark {
@@ -114,7 +114,7 @@
 }
 
 body {
-  font-family: var(--font-roboto), sans-serif !important;
+  font-family: var(--font-geist), ui-sans-serif, system-ui, sans-serif;
 }
 
 @layer base {
@@ -123,6 +123,6 @@ body {
   }
   body {
     @apply bg-background text-foreground;
-    font-family: var(--font-roboto), sans-serif;
+    font-family: var(--font-geist), sans-serif;
   }
 }
