--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -456,9 +456,12 @@ div#grid-column4-flmdlg_dialog-content.e-dlg-content {
   font-family: var(--font-inter) !important;
 }
 
-/* Calendar */
-.datepicker-control-section {
-  max-width: 246px;
-  margin: 30px auto;
-  padding-top: 50px;
+span.e-input-group.e-control-wrapper.e-date-wrapper.e-valid-input {
+  font-family: var(--font-inter) !important;
+  border: 1px solid var(--border) !important;
+  border-radius: var(--radius) !important;
+  padding: 0px 8px !important;
+  font-size: 12px !important;
+  font-weight: 500 !important;
+  color: var(--foreground) !important;
 }
